content/_generated-doc/2.16/config/quarkus-datasource-data-sources-build-time-config.adoc

:summaryTableId: quarkus-datasource-data-sources-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource-data-sources-build-time-config_configuration]]link:#quarkus-datasource-data-sources-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.db-kind]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.db-kind[quarkus.datasource.db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DB_KIND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DB_KIND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.enabled[quarkus.datasource.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.image-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.image-name[quarkus.datasource.devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.port]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.port[quarkus.datasource.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.command]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.command[quarkus.datasource.devservices.command]`

[.description]
--
The container start command to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_COMMAND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.db-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.db-name[quarkus.datasource.devservices.db-name]`

[.description]
--
The name of the database to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_DB_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.username]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.username[quarkus.datasource.devservices.username]`

[.description]
--
The username to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.password]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.password[quarkus.datasource.devservices.password]`

[.description]
--
The password to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.init-script-path]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.init-script-path[quarkus.datasource.devservices.init-script-path]`

[.description]
--
Path to a SQL script that will be loaded from the classpath and applied to the Dev Service database If the provider is not container based (e.g. a H2 or Derby Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_INIT_SCRIPT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health-exclude]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health-exclude[quarkus.datasource.health-exclude]`

[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. 
By default, the health check includes all configured data sources (if it is enabled).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_EXCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.health.enabled[quarkus.datasource.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present. 
This is a global setting and is not specific to a datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.metrics.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.metrics.enabled[quarkus.datasource.metrics.enabled]`

[.description]
--
Whether or not datasource metrics are published in case a metrics extension is present. 
This is a global setting and is not specific to a datasource. 
NOTE: This is different from the "jdbc.enable-metrics" property that needs to be set on the JDBC datasource level to enable collection of metrics for that datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.container-properties-container-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.container-properties-container-properties[quarkus.datasource.devservices.container-properties]`

[.description]
--
Generic properties that are passed for additional container configuration. 
Properties defined here are database specific and are interpreted specifically in each database dev service implementation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_CONTAINER_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.properties-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.devservices.properties-properties[quarkus.datasource.devservices.properties]`

[.description]
--
Generic properties that are added to the database connection URL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEVSERVICES_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.db-kind]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.db-kind[quarkus.datasource."datasource-name".db-kind]`

[.description]
--
The kind of database we will connect to (e.g. h2, postgresql...).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DB_KIND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DB_KIND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.enabled]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.enabled[quarkus.datasource."datasource-name".devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.image-name[quarkus.datasource."datasource-name".devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.container-properties-container-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.container-properties-container-properties[quarkus.datasource."datasource-name".devservices.container-properties]`

[.description]
--
Generic properties that are passed for additional container configuration. 
Properties defined here are database specific and are interpreted specifically in each database dev service implementation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_CONTAINER_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_CONTAINER_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.properties-properties[quarkus.datasource."datasource-name".devservices.properties]`

[.description]
--
Generic properties that are added to the database connection URL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.port]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.port[quarkus.datasource."datasource-name".devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.command]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.command[quarkus.datasource."datasource-name".devservices.command]`

[.description]
--
The container start command to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_COMMAND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.db-name]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.db-name[quarkus.datasource."datasource-name".devservices.db-name]`

[.description]
--
The name of the database to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_DB_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_DB_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.username]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.username[quarkus.datasource."datasource-name".devservices.username]`

[.description]
--
The username to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.password]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.password[quarkus.datasource."datasource-name".devservices.password]`

[.description]
--
The password to use if this Dev Service supports overriding it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.init-script-path]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.devservices.init-script-path[quarkus.datasource."datasource-name".devservices.init-script-path]`

[.description]
--
Path to a SQL script that will be loaded from the classpath and applied to the Dev Service database If the provider is not container based (e.g. a H2 or Derby Database) then this has no effect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_INIT_SCRIPT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__DEVSERVICES_INIT_SCRIPT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.health-exclude]]`link:#quarkus-datasource-data-sources-build-time-config_quarkus.datasource.-datasource-name-.health-exclude[quarkus.datasource."datasource-name".health-exclude]`

[.description]
--
Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. 
By default, the health check includes all configured data sources (if it is enabled).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__HEALTH_EXCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__HEALTH_EXCLUDE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===